k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth-mongo
    spec:
      containers:
      - name:  auth-mongo
        image:  mongo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: auth-mongo
  type: ClusterIP
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
