k8s/ingress-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: Prefix
        backend:
            service:
              name: auth-service
              port:
                number: 3000
          # serviceName: auth-service
          # servicePort: 3000
